add sort menu and head title for recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="an_error_has_occurred_please_try_again">An error has occurred, please try again</string>
     <string name="enter_the_currency_you_need">Enter the currency you need</string>
     <string name="the_field_should_not_be_empty">The field should not be empty</string>
+    <string name="currency">Currency</string>
+    <string name="value">Value</string>
+    <string name="favourite">Favourite</string>
+    <string name="ascending_by_name">Ascending by Name</string>
+    <string name="descending_by_name">Descending by Name</string>
+    <string name="ascending_by_value">Ascending by Value</string>
+    <string name="descending_by_value">Descending by Value</string>
 </resources>
